--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/letter-k (1).png"
     />
 
     <!-- CSS here -->
@@ -35,10 +35,9 @@
     <![endif]-->
 
     <!-- pre loader area start -->
-    <div id="loading">
+    <!-- <div id="loading">
       <div id="loading-center">
         <div id="loading-center-absolute">
-          <!-- loading content here -->
           <div class="tp-preloader-content">
             <div class="tp-preloader-logo">
               <div class="tp-preloader-circle">
@@ -74,7 +73,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- pre loader area end -->
 
     <!-- back to top start -->
@@ -221,7 +220,7 @@
         <div class="row row-cols-5">
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <a href="shop.html" class="tp-mobile-item-btn">
+              <a href="shop-masonary.html" class="tp-mobile-item-btn">
                 <i class="flaticon-store"></i>
                 <span>Store</span>
               </a>
@@ -229,10 +228,12 @@
           </div>
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <button class="tp-mobile-item-btn tp-search-open-btn">
+              <!-- <button class="tp-mobile-item-btn tp-search-open-btn"> -->
+              <a href="shop.html" class="tp-mobile-item-btn">
                 <i class="flaticon-search-1"></i>
                 <span>Search</span>
-              </button>
+              </a>
+              <!-- </button> -->
             </div>
           </div>
           <div class="col">
@@ -1657,10 +1658,10 @@
     </main>
 
     <!-- footer area start -->
-    <footer>
+    <footer style="margin-bottom: -378px">
       <div
-        class="tp-footer-area tp-footer-style-2 tp-footer-style-primary tp-footer-style-6"
-        data-bg-color="#F4F7F9"
+        class="tp-footer-area tp-footer-style-2"
+        data-bg-color="footer-bg-white"
       >
         <div class="tp-footer-top pt-95 pb-40">
           <div class="container">
@@ -1670,13 +1671,19 @@
                   <div class="tp-footer-widget-content">
                     <div class="tp-footer-logo">
                       <a href="index.html">
-                        <img src="assets/img/logo/logo.svg" alt="logo" />
+                        <img
+                          src="assets/img/Fasion/logo1.png"
+                          alt="logo"
+                          style="margin-left: -30px"
+                        />
                       </a>
                     </div>
                     <p class="tp-footer-desc">
-                      We are a team of designers and developers that create high
-                      quality WordPress
+                      We are a team of expert designers and craftsmen,
+                      specializing in creating high-quality, customized fashion
+                      pieces tailored to your unique style.
                     </p>
+
                     <div class="tp-footer-social">
                       <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                       <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -1830,15 +1837,15 @@
                 <div class="col-md-6">
                   <div class="tp-footer-copyright">
                     <p>
-                      © 2023 All Rights Reserved | HTML Template by
-                      <a href="index.html">Themepure</a>.
+                      © 2025 All Rights Reserved | by
+                      <a href="index.html">Khazoor</a>.
                     </p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="tp-footer-payment text-md-end">
                     <p>
-                      <img src="assets/img/footer/footer-pay.png" alt="" />
+                      <img src="assets/img/footer/footer-pay-2.png" alt="" />
                     </p>
                   </div>
                 </div>
