--- a/product-details.html
+++ b/product-details.html
@@ -315,7 +315,7 @@
             </div>
           </div>
           <div class="cartmini__shipping">
-            <p>Free Shipping for all orders over <span>$50</span></p>
+            <p>Free Shipping for all orders over <span>INR50</span></p>
             <div class="progress">
               <div
                 class="progress-bar progress-bar-striped progress-bar-animated"
@@ -339,7 +339,7 @@
                   <a href="product-details.html">Level Bolt Smart Lock</a>
                 </h5>
                 <div class="cartmini__price-wrapper">
-                  <span class="cartmini__price">$46.00</span>
+                  <span class="cartmini__price">INR46.00</span>
                   <span class="cartmini__quantity">x2</span>
                 </div>
               </div>
@@ -359,7 +359,7 @@
         <div class="cartmini__checkout">
           <div class="cartmini__checkout-title mb-30">
             <h4>Subtotal:</h4>
-            <span>$113.00</span>
+            <span>INR113.00</span>
           </div>
           <div class="cartmini__checkout-btn">
             <a href="cart.html" class="tp-btn mb-10 w-100"> view cart</a>
@@ -1469,9 +1469,9 @@
                     </svg>
                   </span>
                   <span><a href="#">Home</a></span>
-                  <span><a href="#">Electronics</a></span>
-                  <span><a href="#">Computers & Tablets</a></span>
-                  <span>Samsung galaxy A7 tablet</span>
+                  <span><a href="#">Women’s Clothing</a></span>
+                  <span><a href="#">Lehengas</a></span>
+                  <span>Women's Beautiful Embroidered Lehenga</span>
                 </div>
               </div>
             </div>
@@ -1504,7 +1504,7 @@
                         aria-selected="true"
                       >
                         <img
-                          src="assets/img/product/details/nav/product-details-nav-1.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </button>
@@ -1519,7 +1519,7 @@
                         aria-selected="false"
                       >
                         <img
-                          src="assets/img/product/details/nav/product-details-nav-2.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </button>
@@ -1534,7 +1534,7 @@
                         aria-selected="false"
                       >
                         <img
-                          src="assets/img/product/details/nav/product-details-nav-3.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </button>
@@ -1549,7 +1549,7 @@
                         aria-selected="false"
                       >
                         <img
-                          src="assets/img/product/details/nav/product-details-nav-4.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </button>
@@ -1564,7 +1564,7 @@
                         aria-selected="false"
                       >
                         <img
-                          src="assets/img/product/details/nav/product-details-nav-5.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </button>
@@ -1580,7 +1580,7 @@
                     >
                       <div class="tp-product-details-nav-main-thumb">
                         <img
-                          src="assets/img/product/details/main/product-details-main-1.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </div>
@@ -1594,7 +1594,7 @@
                     >
                       <div class="tp-product-details-nav-main-thumb">
                         <img
-                          src="assets/img/product/details/main/product-details-main-2.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </div>
@@ -1608,7 +1608,7 @@
                     >
                       <div class="tp-product-details-nav-main-thumb">
                         <img
-                          src="assets/img/product/details/main/product-details-main-3.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </div>
@@ -1622,7 +1622,7 @@
                     >
                       <div class="tp-product-details-nav-main-thumb">
                         <img
-                          src="assets/img/product/details/main/product-details-main-4.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </div>
@@ -1636,7 +1636,7 @@
                     >
                       <div class="tp-product-details-nav-main-thumb">
                         <img
-                          src="assets/img/product/details/main/product-details-main-5.jpg"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt=""
                         />
                       </div>
@@ -1648,10 +1648,10 @@
               <div class="col-xl-5 col-lg-6">
                 <div class="tp-product-details-wrapper">
                   <div class="tp-product-details-category">
-                    <span>Computers & Tablets</span>
+                    <span>Lehenga</span>
                   </div>
                   <h3 class="tp-product-details-title">
-                    Samsung galaxy A8 tablet
+                    Women's Beautiful Embroidered Lehenga
                   </h3>
 
                   <!-- inventory details -->
@@ -1677,18 +1677,20 @@
                     </div>
                   </div>
                   <p>
-                    A Screen Everyone Will Love: Whether your family is
-                    streaming or video chatting with friends tablet A8...
+                    A Lehenga for Every Occasion: Whether you're attending a
+                    wedding or a festive celebration, the Women's Beautiful
+                    Embroidered Lehenga is designed to make you feel like
+                    royalty.
                     <span>See more</span>
                   </p>
 
                   <!-- price -->
                   <div class="tp-product-details-price-wrapper mb-20">
                     <span class="tp-product-details-price old-price"
-                      >$320.00</span
+                      >INR3200.00</span
                     >
                     <span class="tp-product-details-price new-price"
-                      >$236.00</span
+                      >INR2360.00</span
                     >
                   </div>
 
@@ -2633,7 +2635,7 @@
                       >
                         <a href="product-details.html">
                           <img
-                            src="assets/img/product/related/product-related-1.jpg"
+                            src="https://www.lavanyathelabel.com/cdn/shop/files/LBL101KS437_2_1200x.jpg?v=1735980799"
                             alt=""
                           />
                         </a>
@@ -2772,19 +2774,19 @@
                       </div>
                       <div class="tp-product-content-3">
                         <div class="tp-product-tag-3">
-                          <span>Tablet</span>
+                          <span>Lehenga</span>
                         </div>
                         <h3 class="tp-product-title-3">
                           <a href="product-details.html"
-                            >GalaxyS6 Android Tablet</a
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-product-price-wrapper-3">
                           <span class="tp-product-price-3 new-price"
-                            >$102.00</span
+                            >INR1020.00</span
                           >
                           <span class="tp-product-price-3 old-price"
-                            >$226.00</span
+                            >INR2260.00</span
                           >
                         </div>
                       </div>
@@ -2799,7 +2801,7 @@
                       >
                         <a href="product-details.html">
                           <img
-                            src="assets/img/product/related/product-related-2.jpg"
+                            src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4230_0cbb5518-8fdc-400b-9478-9a883fca53d4_1200x.jpg?v=1735979921"
                             alt=""
                           />
                         </a>
@@ -2933,15 +2935,15 @@
                       </div>
                       <div class="tp-product-content-3">
                         <div class="tp-product-tag-3">
-                          <span>SmartPhone</span>
+                          <span>Lehenga</span>
                         </div>
                         <h3 class="tp-product-title-3">
                           <a href="product-details.html"
-                            >Microsoft Surface Pro 8-13"</a
+                            >Women's Beautiful Lehenga</a
                           >
                         </h3>
                         <div class="tp-product-price-wrapper-3">
-                          <span class="tp-product-price-3">$240.00</span>
+                          <span class="tp-product-price-3">INR2400.00</span>
                         </div>
                       </div>
                     </div>
@@ -2955,7 +2957,7 @@
                       >
                         <a href="product-details.html">
                           <img
-                            src="assets/img/product/related/product-related-3.jpg"
+                            src="https://www.lavanyathelabel.com/cdn/shop/files/SV-20231126-0616_bbb33f20-7732-41e0-8eb1-6eed725fd70a_1200x.jpg?v=1735979876"
                             alt=""
                           />
                         </a>
@@ -3094,19 +3096,19 @@
                       </div>
                       <div class="tp-product-content-3">
                         <div class="tp-product-tag-3">
-                          <span>Video & Camera</span>
+                          <span> Lehenga</span>
                         </div>
                         <h3 class="tp-product-title-3">
                           <a href="product-details.html"
-                            >4K Digital Video Camera.</a
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-product-price-wrapper-3">
                           <span class="tp-product-price-3 new-price"
-                            >$76.00</span
+                            >INR7600.00</span
                           >
                           <span class="tp-product-price-3 old-price"
-                            >$106.00</span
+                            >INR1060.00</span
                           >
                         </div>
                       </div>
@@ -3121,7 +3123,7 @@
                       >
                         <a href="product-details.html">
                           <img
-                            src="assets/img/product/related/product-related-4.jpg"
+                            src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A3344_fff6a924-cb33-413b-8bcf-cc160b9465cf_1200x.jpg?v=1735979946"
                             alt=""
                           />
                         </a>
@@ -3260,15 +3262,15 @@
                       </div>
                       <div class="tp-product-content-3">
                         <div class="tp-product-tag-3">
-                          <span>Smart Watch</span>
+                          <span>Lehenga</span>
                         </div>
                         <h3 class="tp-product-title-3">
                           <a href="product-details.html"
-                            >Discover Skincare watch</a
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-product-price-wrapper-3">
-                          <span class="tp-product-price-3">$44.00</span>
+                          <span class="tp-product-price-3">INR4400.00</span>
                         </div>
                       </div>
                     </div>
@@ -3469,10 +3471,10 @@
                 <!-- price -->
                 <div class="tp-product-details-price-wrapper mb-20">
                   <span class="tp-product-details-price old-price"
-                    >$320.00</span
+                    >INR320.00</span
                   >
                   <span class="tp-product-details-price new-price"
-                    >$236.00</span
+                    >INR236.00</span
                   >
                 </div>
 
@@ -3687,10 +3689,10 @@
     </main>
 
     <!-- footer area start -->
-    <footer>
+    <footer style="margin-bottom: -378px">
       <div
-        class="tp-footer-area tp-footer-style-2 tp-footer-style-primary tp-footer-style-6"
-        data-bg-color="#F4F7F9"
+        class="tp-footer-area tp-footer-style-2"
+        data-bg-color="footer-bg-white"
       >
         <div class="tp-footer-top pt-95 pb-40">
           <div class="container">
@@ -3700,13 +3702,19 @@
                   <div class="tp-footer-widget-content">
                     <div class="tp-footer-logo">
                       <a href="index.html">
-                        <img src="assets/img/logo/logo.svg" alt="logo" />
+                        <img
+                          src="assets/img/Fasion/logo1.png"
+                          alt="logo"
+                          style="margin-left: -30px"
+                        />
                       </a>
                     </div>
                     <p class="tp-footer-desc">
-                      We are a team of designers and developers that create high
-                      quality WordPress
+                      We are a team of expert designers and craftsmen,
+                      specializing in creating high-quality, customized fashion
+                      pieces tailored to your unique style.
                     </p>
+
                     <div class="tp-footer-social">
                       <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                       <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -3860,15 +3868,15 @@
                 <div class="col-md-6">
                   <div class="tp-footer-copyright">
                     <p>
-                      © 2023 All Rights Reserved | HTML Template by
-                      <a href="index.html">Themepure</a>.
+                      © 2025 All Rights Reserved | by
+                      <a href="index.html">Khazoor</a>.
                     </p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="tp-footer-payment text-md-end">
                     <p>
-                      <img src="assets/img/footer/footer-pay.png" alt="" />
+                      <img src="assets/img/footer/footer-pay-2.png" alt="" />
                     </p>
                   </div>
                 </div>
