--- a/index.html
+++ b/index.html
@@ -2181,7 +2181,7 @@
         <div class="category-row">
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b1.jpeg"
+              src="./assets/img/Fasion/i1.jpeg"
               alt="AJIO Luxe"
               style="height: 70px"
             />
@@ -2189,7 +2189,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b2.jpeg"
+              src="./assets/img/Fasion/i2.jpeg"
               alt="Sneakerhood"
               style="height: 70px"
             />
@@ -2197,7 +2197,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b3.jpeg"
+              src="./assets/img/Fasion/i3.jpeg"
               alt="Clearance Store"
               style="height: 70px"
             />
@@ -2221,7 +2221,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b3.jpeg"
+              src="./assets/img/Fasion/i4.jpeg"
               alt="Clearance Store"
               style="height: 70px"
             />
@@ -2245,7 +2245,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b1.jpeg"
+              src="./assets/img/Fasion/i1.jpeg"
               alt="AJIO Luxe"
               style="height: 70px"
             />
@@ -2253,7 +2253,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b2.jpeg"
+              src="./assets/img/Fasion/i2.jpeg"
               alt="Sneakerhood"
               style="height: 70px"
             />
@@ -2261,7 +2261,7 @@
           </div>
           <div class="category-wrapper">
             <img
-              src="./assets/img/Fasion/b3.jpeg"
+              src="./assets/img/Fasion/i3.jpeg"
               alt="Clearance Store"
               style="height: 70px"
             />
@@ -2311,7 +2311,7 @@
               <div class="banner-image">
                 <a href="index.html" target="_blank">
                   <img
-                    src="https://www.lavanyathelabel.com/cdn/shop/collections/04_ethnicwear_1400x_a34fb8dc-f016-43eb-95bd-bec3858edc01_1400x.webp?v=1732004280"
+                    src="./assets/img/Fasion/b1.jpeg"
                     alt="Winterwear"
                     class="img-fluid w-100"
                     style="margin-top: -20px"
@@ -2358,7 +2358,7 @@
             <div class="col-xxl-4 col-lg-4">
               <div class="tp-webp-item-2 p-relative z-index-1 mb-10">
                 <img
-                  src="https://cdn.shopify.com/s/files/1/0682/3755/8034/files/SALE_CATEGORY.jpg?v=1735893279"
+                  src="./assets/img/Fasion/b3.jpeg"
                   alt="Image 3"
                   class="img-fluid"
                   style="width: 100%; height: 100px; object-fit: cover"
@@ -2412,7 +2412,8 @@
                     >
                       <div class="tp-category-thumb-2">
                         <img
-                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb
+                          -42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
                           alt="Stylish women’s clothing by Lavanya the Label, product image"
                           style="height: 250px; width: auto"
                         />
